--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src="script.js"></script>
+<link rel="shortcut icon" href="logoIcon.png" />
 
 <head>
   <title>Patient Profile Dashboard</title>
@@ -41,8 +42,9 @@
       <!-- Patient data will be dynamically inserted here -->
     </tbody>
   </table>
-
-
+  <div id="footer">
+    <footer>Developed by Gabriel Alexander Torres</footer>
+  </div>
 </body>
 
 </html>
